--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@datastax/astra-db-ts": "^2.0.1",
     "@google/genai": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.11.4",
-    "node-html-markdown": "^1.3.0"
+    "node-html-markdown": "^1.3.0",
+    "tavily-mcp": "^0.2.0"
   }
 }
